welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:49: error: Unmatched closing brace '}' ignored here
}
^